# gaos-ado-prototype-1

./: .gitignore  CMakeLists.txt  README.md  set_up_git_hooks.py
.github/workflows/: build_cmake.yml
cmake/: cxx.cmake  get_cpm.cmake  python.cmake  sources.cmake
src/ado/: CMakeLists.txt  ado.cmake  experiment_1.ado-schema  hello_world.cpp  op_optional_write.hpp  op_simple.hpp  op_vector.hpp  parse_schema.py
src/ado/ado/: ado_parsing_data.py  parser.py  splitter.py
src/version/: CMakeLists.txt  generate_git_version.py  git_version.cpp  hello_version.cpp
